bugs fxied and edoramedia 5.0 - benita 3.0 - petrokabir projects added to the website

--- a/benita3.html
+++ b/benita3.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>Saman Rashidi ~ Portfolio ~ Benita v1.0 &amp; v2.0</title>
+        <title>Saman Rashidi ~ Portfolio ~ Benita v3.0</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Benita v1.0 &amp; v2.0 website is one of my projects"/>
+        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Benita v3.0 website is one of my projects"/>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Saman Rashidi&#039;s Personal Website ~ Portfolio" />
-        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Benita v1.0 &amp; v2.0 website is one of my projects" />
+        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Benita v3.0 website is one of my projects" />
         <meta property="og:url" content="http://www.samanrashidi.com" />
         <meta property="og:site_name" content="Saman Rashidi" />
         <meta property="og:image" content="images/samanrashidi.png" />
@@ -42,8 +42,8 @@
 
 
             <div class="specific-portfolio">
-                <div class="potfolio-banner" style="background-image:url(images/portfolio/benita/banner.jpg)">
-                    <h1>Benita v1.0 &amp; v2.0 <span>by <strong>Saman Rashidi</strong></span></h1>
+                <div class="potfolio-banner" style="background-image:url(images/portfolio/benita3/banner.jpg)">
+                    <h1>Benita v3.0<span>by <strong>Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -51,10 +51,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image left-aligned">
-                                    <img src="images/portfolio/benita/desktop.png" alt="Benita v1.0 &amp; v2.0 Desktop Version Website" />
+                                    <img src="images/portfolio/benita3/desktop.png" alt="Benita v3.0 Desktop Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text">
-                                    <h6><span class="site-color">"</span> Benita portal provides the latest news in fashion, beauty and lifestyle tips designed <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Benita decided to imporove their website in both design and development because of their positive feedbacks <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -65,10 +65,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-text tablet">
-                                    <h6><span class="site-color">"</span> The Web site also provides a forum for women to be able to negotiate freely about their daily problems <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Lots of pages and options added to the 3rd version of Benita <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="content-image right-aligned">
-                                    <img src="images/portfolio/benita/tablet.png" alt="Benita v1.0 &amp; v2.0 Tablet Version Website" />
+                                    <img src="images/portfolio/benita3/tablet.png" alt="Benita v3.0 Tablet Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -79,10 +79,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image center-aligned">
-                                    <img src="images/portfolio/benita/mobile.png" alt="Benita v1.0 &amp; v2.0 Mobile Version Website" />
+                                    <img src="images/portfolio/benita3/mobile.png" alt="Benita v3.0 Mobile Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text mobile">
-                                    <h6><span class="site-color">"</span> Benita was opened in 2016 and aims to provide quality articles in Farsi and become the reference website on the everyday issues of women <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Benita got transformed in may 2017 and it got divided into Benita and Benidana sites <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
