--- a/edoramedia5.html
+++ b/edoramedia5.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>Saman Rashidi ~ Portfolio ~ Benita v1.0 &amp; v2.0</title>
+        <title>Saman Rashidi ~ Portfolio ~ Edoramedia v5.0</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Benita v1.0 &amp; v2.0 website is one of my projects"/>
+        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Edoramedia v5.0 website is one of my projects"/>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Saman Rashidi&#039;s Personal Website ~ Portfolio" />
-        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Benita v1.0 &amp; v2.0 website is one of my projects" />
+        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Edoramedia v5.0 website is one of my projects" />
         <meta property="og:url" content="http://www.samanrashidi.com" />
         <meta property="og:site_name" content="Saman Rashidi" />
         <meta property="og:image" content="images/samanrashidi.png" />
@@ -42,8 +42,8 @@
 
 
             <div class="specific-portfolio">
-                <div class="potfolio-banner" style="background-image:url(images/portfolio/benita/banner.jpg)">
-                    <h1>Benita v1.0 &amp; v2.0 <span>by <strong>Saman Rashidi</strong></span></h1>
+                <div class="potfolio-banner" style="background-image:url(images/portfolio/edoramedia5/banner.jpg)">
+                    <h1>Edoramedia v5.0 <span>by <strong>Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -51,10 +51,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image left-aligned">
-                                    <img src="images/portfolio/benita/desktop.png" alt="Benita v1.0 &amp; v2.0 Desktop Version Website" />
+                                    <img src="images/portfolio/edoramedia5/desktop.png" alt="Edoramedia v5.0 Desktop Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text">
-                                    <h6><span class="site-color">"</span> Benita portal provides the latest news in fashion, beauty and lifestyle tips designed <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Edoramedia website got transformed into an awesome website in version 5.0 <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -65,10 +65,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-text tablet">
-                                    <h6><span class="site-color">"</span> The Web site also provides a forum for women to be able to negotiate freely about their daily problems <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> We have used the best and latest technologies in our new design and development <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="content-image right-aligned">
-                                    <img src="images/portfolio/benita/tablet.png" alt="Benita v1.0 &amp; v2.0 Tablet Version Website" />
+                                    <img src="images/portfolio/edoramedia5/tablet.png" alt="Edoramedia v5.0 Tablet Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -79,17 +79,17 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image center-aligned">
-                                    <img src="images/portfolio/benita/mobile.png" alt="Benita v1.0 &amp; v2.0 Mobile Version Website" />
+                                    <img src="images/portfolio/edoramedia5/mobile.png" alt="Edoramedia v5.0 Mobile Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text mobile">
-                                    <h6><span class="site-color">"</span> Benita was opened in 2016 and aims to provide quality articles in Farsi and become the reference website on the everyday issues of women <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Our awesome website built in responsive version suitable for all devices such as Tablet, Mobile and &hellip; <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a class="bttn has-icon web-icon" href="http://www.benita.ir/" target="_blank">Open This Project in Web</a>
+                            <a class="bttn has-icon web-icon" href="http://www.edoramedia.com/" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
@@ -127,7 +127,7 @@ sr.reveal('.reveal');
 
 var thisYear = new Date().getFullYear();
 $('.current-year').html(thisYear);
-</script> 
+</script>   
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -137,6 +137,6 @@ $('.current-year').html(thisYear);
   ga('create', 'UA-59994206-1', 'auto');
   ga('send', 'pageview');
 
-</script>     
+</script>   
     </body>
 </html>
