--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Saman Rashidi ~ Web Designer &amp; Front-end Developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="My Personal Website. I'm a Senior Front-end Developer Working in Edoramedia Company"/>
+		<meta name="description" content="My Personal Website, I'm a Senior Front-end Developer Working in Edoramedia Digital Company"/>
 		<meta charset="UTF-8" />
 		<meta name="theme-color" content="#232323" />
 		<meta property="og:locale" content="en_GB" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Saman Rashidi&#039;s Personal Website" />
-		<meta property="og:description" content="My Personal Website. I'm a Senior Front-end Developer Working in Edoramedia Company" />
+		<meta property="og:description" content="My Personal Website, I'm a Senior Front-end Developer Working in Edoramedia Digital Company" />
 		<meta property="og:url" content="http://www.samanrashidi.com" />
 		<meta property="og:site_name" content="Saman Rashidi" />
 		<meta property="og:image" content="http://www.samanrashidi.com/samanrashidi.png" />
@@ -51,8 +51,6 @@
 			  	height: 150px;
 				-webkit-transform: translateZ(0);
 				transform: translateZ(0);
-				-webkit-filter: url("#goo");
-				filter: url("#goo");
 				-webkit-transition:all .5s ease-in-out;
 				-moz-transition:all .5s ease-in-out;
 				transition:all .5s ease-in-out;
@@ -64,8 +62,6 @@
 				text-align: center;
 				font-size: 0;
 				margin-top:25px;
-				-webkit-filter: url("#goo");
-				filter: url("#goo");
 				-webkit-transform: translateZ(0);
 				transform: translateZ(0);
 			}
@@ -267,6 +263,45 @@
 								<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
+											<h4>Edoramedia v5.0</h4>
+											<p>Edoramedia website got transformed into an awesome website in version 5.0</p>
+											<a class="bttn has-icon read-more" href="edoramedia5.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/edoramedia5-thumb.jpg" alt="Edoramedia v5.0 Website by Saman Rashidi" />
+							</li>
+							<li>
+								<div class="portfolio-layer third-bg">
+								<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Benita v3.0</h4>
+											<p>Benita decided to imporove their website in both design and development because of their positive feedbacks</p>
+											<a class="bttn has-icon read-more" href="benita3.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/benita3-thumb.jpg" alt="Benita v3.0 Website by Saman Rashidi" />
+							</li>
+							<li>
+								<div class="portfolio-layer third-bg">
+								<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Petrokabir Co.</h4>
+											<p>Petro Sanat Kabir (PSK), was established in response to a rising demand for numerous services in oil, gas and petrochemical industries. Our talented people with the supervision of our experienced managers assist us to drive our business forward.</p>
+											<a class="bttn has-icon read-more" href="petrokabir.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/petrokabir-thumb.jpg" alt="Petrokabir Website by Saman Rashidi" />
+							</li>
+							<li>
+								<div class="portfolio-layer third-bg">
+								<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
 											<h4>Branford Training</h4>
 											<p>Jordan’s experience over the last 15 years transcends all age categories and fitness levels.From training toddlers to tumble, to Plyometric training with World Class track athletes, to helping the elderly rehabilitate after hip surgery.</p>
 											<a class="bttn has-icon read-more" href="branford.html">Read More About This Project</a>
@@ -306,13 +341,13 @@
 								<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
-											<h4>Benita</h4>
+											<h4>Benita v1.0 &amp; v2.0</h4>
 											<p>Benita portal provides the latest news in fashion, beauty and lifestyle tips designed. The Web site also provides a forum for women to be able to negotiate freely about their daily problems. Benita was opened in 2016 and aims to provide quality articles in Farsi and become the reference website on the everyday issues of women</p>
 											<a class="bttn has-icon read-more" href="benita.html">Read More About This Project</a>
 										</div><!-- portfolio-layer-content end -->
 									</div><!-- portfolio-inner-layer end -->
 								</div><!-- portfolio-layer end -->
-								<img src="images/portfolio/benita-thumb.jpg" alt="Benita Website by Saman Rashidi" />
+								<img src="images/portfolio/benita-thumb.jpg" alt="Benita v1.0 & v2.0 Website by Saman Rashidi" />
 							</li>
 							<li>
 								<div class="portfolio-layer">
