--- a/edoramedia.html
+++ b/edoramedia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>Saman Rashidi ~ Portfolio ~ Edoramedia v3.0</title>
+        <title>:: Saman Rashidi ~ Portfolio ~ Edoramedia v3.0 ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Edoramedia v3.0 website is one of my projects"/>
         <meta charset="UTF-8" />
@@ -14,6 +14,7 @@
         <meta property="og:site_name" content="Saman Rashidi" />
         <meta property="og:image" content="images/samanrashidi.png" />
         <meta name="author" content="Saman Rashidi" />
+        <link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />  
 
         <!-- CSS Files
