--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-GB">
 	<head>
-		<title>Saman Rashidi ~ Web Designer &amp; Front-end Developer</title>
+		<title>:: Saman Rashidi ~ Web Designer &amp; Front-end Developer ::</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="My Personal Website, I'm a Senior Front-end Developer Working in Edoramedia Digital Company"/>
 		<meta charset="UTF-8" />
@@ -14,6 +14,7 @@
 		<meta property="og:site_name" content="Saman Rashidi" />
 		<meta property="og:image" content="http://www.samanrashidi.com/samanrashidi.png" />
 		<meta name="author" content="Saman Rashidi" />
+		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
 		<link rel="icon" type="image/png" href="favicon.png" />  
 
 		<!-- CSS Files
