--- a/battle-royale.html
+++ b/battle-royale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>Saman Rashidi ~ Portfolio ~ Battle Royale</title>
+        <title>:: Saman Rashidi ~ Portfolio ~ Battle Royale ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Battle Royale website is one of my projects"/>
         <meta charset="UTF-8" />
@@ -14,7 +14,8 @@
         <meta property="og:site_name" content="Saman Rashidi" />
         <meta property="og:image" content="images/samanrashidi.png" />
         <meta name="author" content="Saman Rashidi" />
-        <link rel="icon" type="image/png" href="favicon.png" />  
+        <link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
+        <link rel="icon" type="image/png" href="favicon.png" />
 
         <!-- CSS Files
         ================================================== -->
@@ -41,9 +42,9 @@
 <!-- ======== Main Content Start ======== -->
 
 
-            <div class="specific-portfolio">
+            <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
                 <div class="potfolio-banner" style="background-image:url(images/portfolio/broyale/banner.jpg)">
-                    <h1>Battle Royale <span>by <strong>Saman Rashidi</strong></span></h1>
+                    <h1><div itemprop="name">Battle Royale</div> <span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -51,10 +52,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image left-aligned">
-                                    <img src="images/portfolio/broyale/desktop.png" alt="Battle Royale Desktop Version Website" />
+                                    <img itemprop="image" src="images/portfolio/broyale/desktop.png" alt="Battle Royale Desktop Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text">
-                                    <h6><span class="site-color">"</span> Battle Royale began its activities through the @Broyale telegram channel. On this website you can find the latest information of Clash Royale <span class="site-color">"</span></h6>
+                                    <h6 itemprop="description"><span class="site-color">"</span> Battle Royale began its activities through the @Broyale telegram channel. On this website you can find the latest information of Clash Royale <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -89,7 +90,7 @@
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a class="bttn has-icon web-icon" href="http://www.edoramediarepository.com/samanira/broyale/" target="_blank">Open This Project in Web</a>
+                            <a class="bttn has-icon web-icon" itemprop="url" href="http://www.edoramediarepository.com/samanira/broyale/" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
